# LinusWare-executor

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  EXTREME_DECOMPILING_GUIDE.md  Injector.c  LICENSE  Makefile  Makefile.runtime  README.md  SirrachaQt.cpp  SirrachaUI.c  dump_memory.sh  dump_sober.sh  fast_check.s  final_dump.py  find_offsets.py  gdb_commands.txt  heavy_math.s  init.lua  inject_sober.sh  injected_lib.c  injection_log.txt  injector  linusware-qt  loader  luau_api.h  pattern_scanner.c  pattern_scanner.h  roblox_offsets.h  roblox_state.c  simd_utils.s  sirracha
docs/: CONTRIBUTING.md  EXTREME_DECOMPILING_GUIDE.md
kernel/: Makefile  linusware.c  linusware.h  linusware.mod.c
scripts/: dump_memory.sh  dump_ram.py  dump_sober.sh  dump_sober_memory.sh  init_env.sh  inject_sober.sh  setup_preload.sh  sys_integrity.sh  test_v3.sh  welcome.lua
sirracha-ui/: index.html  main.js  package-lock.json  package.json  renderer.js  run.sh  styles.css
sirracha.rep/: project.prp  projectState
sirracha.rep/idata/: ~journal.bak
sober_dump_144953/: exec_regions.txt  maps.txt
src/: Injector.c  vm_inject.c
src/asm/: simd_utils.s
src/core/: executor_v3.c  hook_executor.c  injected_lib.c  injected_lib.c.bak2  injected_lib_preload.c  injected_lib_v2.c  linusware_audit.c  loader.c  luau_api.h  remote_inject.c  remote_inject.h  roblox_offsets.h  roblox_state.c  shared_ipc.c  (+3 more)
tools/: auto_find_offsets.py  check_offsets.py  dump_range.py  dump_table.py  dumper.py  extract_all_libs.sh  extract_libloader.sh  find_by_calls.py  find_offsets.py  find_str.py  find_working_offsets.py  force_extract.sh  list_candidates.py  scan_lua.py  scan_mem.py  scan_mem_all.py  scan_vtables.py  super_crawl.py  xref_analysis.py
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src-tauri/src/config/: mod.rs
ui/src-tauri/src/ipc/: mod.rs
ui/src-tauri/src/logging/: mod.rs
ui/src-tauri/src/memory/: mod.rs
ui/src-tauri/src/process/: mod.rs  scanner.rs
ui/src-tauri/src/script/: mod.rs
(+9 files in other folders)
